"1" ALINEADO CON "Frames" Y TEXTO CON FUENTE
- Alineé los textos, ya que el 1 no toca su top, y agregué la fuente del
  texto descripción de "Frames". Ahora falta que el último contenedor
  esté abajo del "Frames".

--- a/ejemplo4.html
+++ b/ejemplo4.html
@@ -21,7 +21,12 @@
 
     <div class="derecha1">
         <p class="titulo">Frames</p>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod perferendis incidunt quo, deleniti adipisci expedita natus libero corrupti, et iste consequuntur minus enim impedit minima facilis culpa dicta, rerum consequatur?</p>
+        <p class="texto">
+            Frames in Figma are what you may think as artboards in other design
+            tools. Frames are a foundational element for your desgins that act
+            as a top-level container for most things you create in Figma. There
+            are a few different ways to create frames in Figma:
+        </p>
     </div>
 
     <div class="derecha2">
