--- a/ejemplo4.html
+++ b/ejemplo4.html
@@ -35,7 +35,10 @@
         <div class="derecha2">
             <div class="izquierdatarjeta">
                 <p class="subtitulo">Custom sizes</p>
-                <p class="textochico">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem </p>
+                <p class="textochico">
+                    Create custom sized frames by selecting the frame tool and
+                    click and drag your cursor to the desired size.
+                </p>
     
                 <br>
     
